@@ -57,6 +57,7 @@ rb-crafting-time-desc=How long it takes to make this recipe in a crafter with a 
 rb-default-temperature=Default temperature
 rb-delete-favorites=Delete favorites
 rb-delete-history=Delete history
+rb-detach-instruction=Detach information window
 rb-disabled-abbrev=(D)
 rb-favorites=Favorites
 rb-fixed-recipe=Fixed recipe
